{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 617,
  "lineage": "386528c4-7c6f-4b41-324d-45d5bd7ff1ad",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "UbuntuServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dc0b9eb1475b0039",
            "domain": "vpc",
            "id": "eipalloc-2082911d",
            "instance": "i-03326e7ebf1c957c5",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-02b4947d5c59e4ece",
            "private_dns": "ip-10-0-1-214.eu-central-1.compute.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-52-29-114-88.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.114.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Class": "Modules",
              "Project": "Lesson 2",
              "Purpose": "Education"
            },
            "tags_all": {
              "Class": "Modules",
              "Project": "Lesson 2",
              "Purpose": "Education"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.UbuntuServer",
            "module.ec2.aws_security_group.StagingUbuntuServer",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "UbuntuServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0502e817a62226e03",
            "arn": "arn:aws:ec2:eu-central-1:780590414095:instance/i-03326e7ebf1c957c5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03326e7ebf1c957c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b4947d5c59e4ece",
            "private_dns": "ip-10-0-1-214.eu-central-1.compute.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-18-192-65-21.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.65.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ce8a455289eee12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-082e2fd1fd0a291b7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d870cc221cf9ca0",
            "tags": {
              "Class": "Modules",
              "Project": "Lesson 2",
              "Purpose": "Education"
            },
            "tags_all": {
              "Class": "Modules",
              "Project": "Lesson 2",
              "Purpose": "Education"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082e2fd1fd0a291b7"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.StagingUbuntuServer",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "UbuntuServerNetworkInterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-053ee18f7c528d0c2",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:22:20:0d:19:54",
            "private_dns_name": "ip-10-0-1-86.eu-central-1.compute.internal",
            "private_ip": "10.0.1.86",
            "private_ips": [
              "10.0.1.86"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-038a18e5ebbb6b45d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d870cc221cf9ca0"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "StagingUbuntuServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:security-group/sg-082e2fd1fd0a291b7",
            "description": "Hillel Modules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082e2fd1fd0a291b7",
            "ingress": [],
            "name": "For staging env20210607182837127900000001",
            "name_prefix": "For staging env",
            "owner_id": "780590414095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Class": "Modules",
              "Project": "Lesson 2",
              "Purpose": "Education"
            },
            "tags_all": {
              "Class": "Modules",
              "Project": "Lesson 2",
              "Purpose": "Education"
            },
            "timeouts": null,
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from the world, not secure",
            "from_port": 22,
            "id": "sgrule-143060165",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082e2fd1fd0a291b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.StagingUbuntuServer",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from the world, not secure",
            "from_port": 8080,
            "id": "sgrule-4210198952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082e2fd1fd0a291b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.StagingUbuntuServer",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:internet-gateway/igw-03ed8899c84f2d16b",
            "id": "igw-03ed8899c84f2d16b",
            "owner_id": "780590414095",
            "tags": {
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ed8899c84f2d16b",
            "id": "r-rtb-026241e1ce66bb0881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026241e1ce66bb088",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:route-table/rtb-026241e1ce66bb088",
            "id": "rtb-026241e1ce66bb088",
            "owner_id": "780590414095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route Table",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Public Route Table",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc91f8b7031774ce",
            "route_table_id": "rtb-026241e1ce66bb088",
            "subnet_id": "subnet-066ed6a0916119d1d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d55df70e218534d",
            "route_table_id": "rtb-026241e1ce66bb088",
            "subnet_id": "subnet-00d870cc221cf9ca0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a73d102d9cdeb8a",
            "route_table_id": "rtb-026241e1ce66bb088",
            "subnet_id": "subnet-0f09106d7ef87a2a0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:subnet/subnet-0d08dd2aac4d16e98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d08dd2aac4d16e98",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780590414095",
            "tags": {
              "Name": "Private-10.0.3.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Private-10.0.3.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:subnet/subnet-0bdb62c8673685db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0bdb62c8673685db2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780590414095",
            "tags": {
              "Name": "Private-10.0.4.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Private-10.0.4.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:subnet/subnet-0b0faaaab78b60751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0b0faaaab78b60751",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780590414095",
            "tags": {
              "Name": "Private-10.0.5.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Private-10.0.5.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:subnet/subnet-066ed6a0916119d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-066ed6a0916119d1d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "780590414095",
            "tags": {
              "Name": "Public-10.0.0.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Public-10.0.0.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:subnet/subnet-00d870cc221cf9ca0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00d870cc221cf9ca0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "780590414095",
            "tags": {
              "Name": "Public-10.0.1.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Public-10.0.1.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:subnet/subnet-0f09106d7ef87a2a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f09106d7ef87a2a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "780590414095",
            "tags": {
              "Name": "Public-10.0.2.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "Public-10.0.2.0/24",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "vpc_id": "vpc-0838ea4dbfef0a220"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780590414095:vpc/vpc-0838ea4dbfef0a220",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090a8358eb2cb9ee1",
            "default_route_table_id": "rtb-0f2c6521846718b0a",
            "default_security_group_id": "sg-038a18e5ebbb6b45d",
            "dhcp_options_id": "dopt-0ddc7f7b8d3a9c956",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0838ea4dbfef0a220",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f2c6521846718b0a",
            "owner_id": "780590414095",
            "tags": {
              "Name": "10.0.0.0/16",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            },
            "tags_all": {
              "Name": "10.0.0.0/16",
              "Project": "Hillel",
              "Purpose": "Terraform guru :D"
            }
          }
        }
      ]
    }
  ]
}